--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "@prisma/extension-pulse": "^1.1.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
