--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
+    "@prisma/client": "^5.14.0",
     "@prisma/extension-pulse": "^1.1.0",
+    "@vercel/postgres": "^0.8.0",
     "next": "14.2.3",
+    "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.24.0"
