--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.14.0",
     "@prisma/extension-pulse": "^1.1.0",
     "@vercel/postgres": "^0.8.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.3",
     "prisma": "^5.14.0",
     "react": "^18",
